@@ -1,0 +1,3 @@
+# Set this variable if you want programs to use the 
+# oss-to-alsa wrapper instead of the OSS kernel driver.
+# USE_AOSS_WRAPPER=y
